fix spacing and padding
cleaned up website

--- a/style.css
+++ b/style.css
@@ -69,13 +69,23 @@ h1{
   font-size: 25px;
   font-weight: bold;
   border-bottom: 2px solid #50bf8b;
-  margin-bottom: 0px;
-  padding-top: 0.5em;
+  margin-bottom: 0em;
+  padding-bottom: 0.5em;
+  padding-top: 1em;
+  padding-left: 1.5em;
 }
 
 h3{
   margin-top: 0.5em;
   margin-bottom: 0.5em;
+  padding-left: 2em;
+}
+
+/* List for Jobs*/
+
+h4{
+  margin-top: 1em;
+  margin-bottom: .5em;
 }
 
 ul{
@@ -90,7 +100,7 @@ li{
 }
 
 .detail{
-  width:85%;
+  width:65%;
   background-color: white;
   margin: 0 auto;
   padding: 0 0.5em 0.5em 0.5em;
@@ -98,7 +108,7 @@ li{
 }
 
 .detail p{
-  margin:0.5em;
+  margin:2.5em;
   line-height: 1.5em;
 }
 
@@ -211,13 +221,15 @@ padding-bottom: 5px;
 form {
   margin-left: 1em;
   line-height: 1.5em;
+  padding-left: 1.5em;
 }
 
 
 
 /* Membership */
 td {
-  padding: 8px;
+  padding: 4px;
+  padding-left: 4em;
 }
 
 
